--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": "concurrently \"npm run dev\" \"npm run mock\"",
+    "mock": "json-server -w db.json -p 4200"
   },
   "dependencies": {
     "next": "12.2.0",
+    "nextjs-progressbar": "0.0.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.1",
+    "@types/react": "^18.0.14",
+    "concurrently": "^7.2.2",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0"
+    "eslint-config-next": "12.2.0",
+    "typescript": "^4.7.4"
   }
 }
